[gd_scene load_steps=4 format=3 uid="uid://uqst8elkmddt"]

[ext_resource type="Script" uid="uid://b1h0t87s75wwh" path="res://scripts/ui/SelectedUnitsPanel.gd" id="1_panel"]
[ext_resource type="Theme" uid="uid://bh3pao1yls74n" path="res://resources/themes/main_theme.tres" id="2_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_selected"]
bg_color = Color(0.039, 0.059, 0.118, 0.85)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.898, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0.898, 1, 0.4)
shadow_size = 6

[node name="SelectedUnitsPanel" type="Panel"]
custom_minimum_size = Vector2(505, 100)
offset_right = 505.0
offset_bottom = 100.0
theme = ExtResource("2_theme")
theme_override_styles/panel = SubResource("StyleBoxFlat_selected")
script = ExtResource("1_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2

[node name="TopBar" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="PaintButtons" type="HBoxContainer" parent="VBoxContainer/TopBar"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="PaintScoutBtn" type="Button" parent="VBoxContainer/TopBar/PaintButtons"]
custom_minimum_size = Vector2(32, 24)
layout_mode = 2
tooltip_text = "Paint scan targets for scout drones"
text = "üîç"

[node name="PaintMiningBtn" type="Button" parent="VBoxContainer/TopBar/PaintButtons"]
custom_minimum_size = Vector2(32, 24)
layout_mode = 2
tooltip_text = "Paint mining targets for mining drones"
text = "‚öí"

[node name="PaintCombatBtn" type="Button" parent="VBoxContainer/TopBar/PaintButtons"]
custom_minimum_size = Vector2(32, 24)
layout_mode = 2
tooltip_text = "Paint attack targets for combat drones"
text = "‚öî"

[node name="Spacer" type="Control" parent="VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FormationButtons" type="HBoxContainer" parent="VBoxContainer/TopBar"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="LineBtn" type="Button" parent="VBoxContainer/TopBar/FormationButtons"]
custom_minimum_size = Vector2(32, 24)
layout_mode = 2
tooltip_text = "Line Formation"
toggle_mode = true
button_pressed = true
text = "‚ñ¨"

[node name="WedgeBtn" type="Button" parent="VBoxContainer/TopBar/FormationButtons"]
custom_minimum_size = Vector2(32, 24)
layout_mode = 2
tooltip_text = "Wedge Formation"
toggle_mode = true
text = "‚óÅ"

[node name="CircleBtn" type="Button" parent="VBoxContainer/TopBar/FormationButtons"]
custom_minimum_size = Vector2(32, 24)
layout_mode = 2
tooltip_text = "Circle Formation"
toggle_mode = true
text = "‚óè"

[node name="GridBtn" type="Button" parent="VBoxContainer/TopBar/FormationButtons"]
custom_minimum_size = Vector2(32, 24)
layout_mode = 2
tooltip_text = "Grid Formation"
toggle_mode = true
text = "‚ñ¶"

[node name="ActionButtons" type="HBoxContainer" parent="VBoxContainer/TopBar"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="StopBtn" type="Button" parent="VBoxContainer/TopBar/ActionButtons"]
custom_minimum_size = Vector2(32, 24)
layout_mode = 2
tooltip_text = "Stop all selected units"
text = "‚ñ†"

[node name="AttackMoveBtn" type="Button" parent="VBoxContainer/TopBar/ActionButtons"]
custom_minimum_size = Vector2(32, 24)
layout_mode = 2
tooltip_text = "Attack-move to location"
text = "‚öî"

[node name="PatrolBtn" type="Button" parent="VBoxContainer/TopBar/ActionButtons"]
custom_minimum_size = Vector2(32, 24)
layout_mode = 2
tooltip_text = "Set patrol route"
text = "‚Üª"

[node name="ReturnCargoBtn" type="Button" parent="VBoxContainer/TopBar/ActionButtons"]
custom_minimum_size = Vector2(32, 24)
layout_mode = 2
tooltip_text = "Return cargo to command ship"
text = "‚èé"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="ContentContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 2
